Fixed half folding issue on mobile configuration

--- a/docs/PaulPio_PIXI_Demo/pio.css
+++ b/docs/PaulPio_PIXI_Demo/pio.css
@@ -114,7 +114,8 @@ jupiterbjy: code itself is not modified and all right reserved to original autho
 
 #pio{ vertical-align: middle }
 
-@media screen and (max-width: 768px){
-    #pio{ width: 8em }
-    .pio-container{ pointer-events: none }
-}
+
+/*@media screen{*/
+/*    #pio{ width: 8em }*/
+/*    .pio-container{ pointer-events: none }*/
+/*}*/
